[project]
name = "beatsaver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "rapidfuzz>=3.14.5",
    "respx>=0.23.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
beatsaver-sync = "beatsaver_sync.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
